# fullstack-rust-react-template

./: .cspell.json  .dockerignore  .env  .env.dev  .gitignore  .gitlab-ci.yml  .typos.toml  CLAUDE.md  Cargo.toml  README.md  TODO.md  deny.toml  docker-compose-auth.yml  docker-compose-hot-reloading.yml  docker-compose.yml  old  rustfmt.toml
backend/: Dockerfile.debug  Dockerfile.release  build.sh
backend/logging/: Cargo.toml
backend/logging/src/: lib.rs
backend/mailer/: Cargo.toml
backend/mailer/src/: builder.rs  errors.rs  lib.rs  templates.rs
backend/mailer/tests/: integration.rs
backend/models/src/: error.rs  lib.rs  profile.rs  user.rs
backend/service/: Cargo.toml
backend/service/src/: main.rs
backend/service/src/api/: mod.rs  state.rs
backend/service/src/databases/: database.rs  mod.rs  models.rs
crates/: README.md  build-containers.sh  build.sh
crates/api/: Cargo.toml
crates/api/src/: app_state.rs  error.rs  lib.rs  middleware.rs  misc.rs  models.rs  routes.rs  state.rs
crates/api/src/endpoints/: README.md  mod.rs  storage.rs
crates/api/src/endpoints/api_key/: endpoints.rs  models.rs
crates/api/src/endpoints/storage/: endpoints.rs  models.rs
crates/api/src/endpoints/user/: endpoints.rs  models.rs
crates/api/src/extractors/: app_state.rs  errors.rs  mod.rs  user.rs
crates/app_core/: Cargo.toml
crates/app_core/src/: api_key.rs  error.rs  lib.rs  models.rs  user.rs
crates/authentication/: Cargo.toml
crates/authentication/src/: error.rs  jwt.rs  lib.rs
crates/authenticator/: Cargo.toml
crates/authenticator/src/: authenticator.rs  error.rs  lib.rs
crates/authenticator/src/backends/: mod.rs  secrets_provider.rs
crates/binaries/: README.md
crates/binaries/backend/: Cargo.toml
crates/binaries/backend/src/: main.rs  program.rs
crates/cache/: Cargo.toml  README.md
crates/cache/src/: cache.rs  error.rs  lib.rs
crates/cache/src/backends/: redis.rs
crates/cache/tests/: redis.rs
crates/cache/tests/common/: cache.rs  containers.rs  mod.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: cli.rs  config.rs  defaults.rs  error.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs
crates/database/: Cargo.toml  README.md
crates/database/migrations/: 0001_created_at_updated_at_trigger.down.sql  0001_created_at_updated_at_trigger.up.sql  0002_user_table.down.sql  0002_user_table.up.sql  0003_apikey_table.down.sql  0003_apikey_table.up.sql
crates/database/src/: crud.rs  database.rs  error.rs  generated_models.rs  lib.rs  models.rs  postgres.rs
crates/database/src/backends/: postgres.rs
crates/database/tests/: postgres.rs
crates/database/tests/common/: containers.rs  database.rs  mod.rs
crates/database_crud_derive/: Cargo.toml
crates/database_crud_derive/src/: gen_create.rs  gen_delete.rs  gen_patch.rs  gen_read.rs  lib.rs  parse.rs  table_name.rs  type_mapping.rs
crates/database_crud_derive/tests/: trybuild.rs
crates/database_crud_derive/tests/fixtures/: fail_enum.rs  fail_enum.stderr  fail_tuple_struct.rs  fail_tuple_struct.stderr
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/mailer/: Cargo.toml  README.md
crates/mailer/src/: builder.rs  error.rs  lib.rs
crates/mailer/tests/: integration.rs
crates/models/: Cargo.toml  README.md
crates/models/src/: api_key.rs  auth.rs  comment.rs  company.rs  lib.rs  user.rs  user_invoice_info.rs
crates/rbac/: Cargo.toml
crates/rbac/src/: access_control.rs  lib.rs  object_permissions.rs  permissions.rs  role.rs  scope.rs
crates/service/src/api/: errors.rs
crates/service/src/databases/: errors.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: compressor.rs  error.rs  file_optimizer.rs  images.rs  lib.rs  parameters.rs  s3.rs  storage.rs
crates/storage/src/backends/: mod.rs  s3.rs
crates/storage/src/testing/: README.md  containers.rs  mod.rs  storage.rs  trait_tests.rs
crates/storage/src/testing/containers/: minio.rs
crates/storage/tests/: README.md  s3.rs
crates/storage/tests/common/: containers.rs  mod.rs  storage.rs
database/: 000-initialization.sql
doc/authentication/: manual-testing.md
docs/superpowers/specs/: 2026-05-08-api-key-management-design.md
frontend/: Dockerfile.debug  Dockerfile.release  README.md  build-containers.sh  build.sh  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx  utils.css
frontend/src/app/: App.tsx  AppProvider.tsx  AppRouter.tsx
frontend/src/components/layouts/: SectionContainer.tsx
frontend/src/components/sections/: About.tsx  Footer.tsx  Header.tsx
frontend/src/components/seo/: HeadMetadata.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/hooks/: use-disclosure.ts
infrastructure/docker-compose/: docker-compose-full.yml  docker-compose-hot-reloading.yml  docker-compose.authentication.yml  docker-compose.base.yml  docker-compose.debug-services.yml  docker-compose.debug.yml  docker-compose.hot-reloading.yml  docker-compose.monitoring.yml  docker-compose.release.yml
infrastructure/docker/app_postgres/: Dockerfile  healthcheck.sh
infrastructure/docker/backend/: Dockerfile.debug  Dockerfile.release
infrastructure/docker/frontend/: Dockerfile.debug  Dockerfile.release
infrastructure/docker/postgres/: Dockerfile
infrastructure/docker/postgres_migration/: Dockerfile
infrastructure/prometheus/: prometheus.yml
manifests/authelia/: configuration.yml
manifests/authentication/: lldap.toml
manifests/authentication/authelia/: configuration.yml
manifests/authentication/postgres/: 000-initialization.sql
scripts/: README.md  build-containers.sh  build.sh  build_database_rust_models.sh  build_sqlx_static_schema.sh  ensure_created_at_and_updated_at.sql  generate_database_rust_models.sh  open_firefox.debug.sh  test_coverage.sh  test_cve.sh  test_integration.sh  test_licenses.sh  test_lint.sh  test_units.sh
scripts/git_hooks/: pre-push
tools/http_health_checker/: Cargo.toml  README.md
tools/http_health_checker/src/: main.rs
(+7 files in other folders)
