# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "1"
members = [
  # "crates/api",
  # "crates/binaries/backend",
  # "crates/core",
  # "crates/mailer",
  "crates/config",
  "crates/database",
  "crates/logging",
  "crates/storage",
  "tools/http_health_checker",
]

[profile.release]
lto = true
strip = true
