# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "1"
members = [
  "crates/api",
  "crates/cache",
  "crates/authentication",
  "crates/binaries/backend",
  "crates/app_core",
  "crates/mailer",
  "crates/config",
  "crates/database",
  "crates/database_crud_derive",
  "crates/logging",
  "crates/storage",
  "tools/http_health_checker", "crates/rbac",
]

[profile.release]
lto = true
strip = true
