[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../logging" }
models = { path = "../models" }
anyhow = { version = "1.0.100" }
axum = { version = "0.8.8", features = ["http1", "http2"] }
axum-macros = "0.5.0"
axum-prometheus = { version = "*", features = ["metrics-exporter-prometheus"] }
chrono = { version = "0.4.42" }
clap = { version = "4.5.53", features = ["derive", "env"] }
jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
metrics = { version = "0.24.3" }
metrics-exporter-prometheus = { version = "0.18.1", features = ["tokio"] }
regex = { version = "*" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "full"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.8", features = [
    "decompression-gzip",
    "trace",
    "timeout",
    "auth",
    "uuid",
    "cors",
    "tokio",
    "sensitive-headers",
    "set-header",
    "normalize-path",
] }
tracing = "0.1.44"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["fast-rng", "serde", "v7"] }
