[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../logging" }
config = { path = "../config" }
app_core = { path = "../app_core" }
database = { path = "../database" }
storage = { path = "../storage" }
cache = { path = "../cache" }
authentication = { path = "../authentication" }
anyhow = { version = "1" }
async-trait = "0"
axum = { version = "0", features = ["http1", "http2"] }
axum-macros = "0"
axum-prometheus = { version = "*", features = ["metrics-exporter-prometheus"] }
chrono = { version = "0" }
clap = { version = "4", features = ["derive", "env"] }
jsonwebtoken = { version = "10", features = ["use_pem", "rust_crypto"] }
metrics = { version = "0" }
metrics-exporter-prometheus = { version = "0", features = ["tokio"] }
regex = { version = "*" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "full"] }
tower = { version = "0" }
tower-http = { version = "0", features = [
    "decompression-gzip",
    "compression-gzip",
    "trace",
    "timeout",
    "auth",
    "uuid",
    "cors",
    "tokio",
    "sensitive-headers",
    "set-header",
    "normalize-path",
] }
tracing = "0"
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-axum = { version = "0" }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["fast-rng", "serde", "v7"] }
