[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database"}
logging = { path = "../logging" }
config = { path = "../config" }
thiserror = "2.0.17"
uuid = { version = "1", features = ["fast-rng", "serde", "v7"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "full"] }
