[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database"}
models = { path = "../models" }
rbac = { path = "../rbac" }
logging = { path = "../logging" }
config = { path = "../config" }
thiserror = "2.0.17"
uuid = { version = "1", features = ["fast-rng", "serde", "v4", "v7"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "full"] }
rand = "0"
sha2 = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
async-trait = "0"
