[package]
name = "authenticator"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../logging" }
config = { path = "../config" }
database = { path = "../database" }
cache = { path = "../cache" }
reqwest = { version = "0", features = ["json"] }
jsonwebtoken = "10"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
async-trait = "0"
uuid = "1"
tokio = "1"
