[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../logging" }
config = { path = "../config" }
chrono = { version = "*" }
sqlx = { version = "0.8" }
deadpool-postgres = { version = "*" }
metrics = { version = "0.24" }
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-serde_json-1",
    "with-chrono-0_4",
    "with-time-0_3",
    "with-bit-vec-0_6",
] }
uuid = { version = "1.19", features = ["fast-rng", "serde", "v7"] }
thiserror = "2.0.17"
tracing = { version = "0.1.44", features = ["async-await"] }
async-trait = "*"