[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
database_crud_derive = { path = "../database_crud_derive" }
logging = { path = "../logging" }
config = { path = "../config" }
chrono = { version = "*" }
sqlx = { version = "0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
metrics = { version = "0" }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
uuid = { version = "1", features = ["fast-rng", "serde", "v7"] }
thiserror = "2"
tracing = { version = "0", features = ["async-await"] }
