[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
database_crud_derive = { path = "../database_crud_derive" }
logging = { path = "../logging" }
config = { path = "../config" }
chrono = { version = "*" }
serde_json = "1"
sqlx = { version = "0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
metrics = { version = "0" }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
uuid = { version = "1", features = ["fast-rng", "serde", "v7"] }
thiserror = "2"
tracing = { version = "0", features = ["async-await"] }

[dev-dependencies]
libtest-mimic = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
testcontainers = "0"
testcontainers-modules = { version = "0", features = ["postgres"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[[test]]
name = "postgres"
harness = false
