[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1"
utoipa = { version = "5", features = ["uuid"] }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9" }
uuid = { version = "1.7", features = ["fast-rng", "serde", "v4"] }
