[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../logging" }
config = { path = "../config" }
flate2 = "1"
async-trait = "0"
libcaesium = "0"
s3 = { version = "0", features = ["checksums", "metrics", "tracing"] }
# reqx 0.1.29 added a `message` field to Error::Transport that breaks s3 0.1.22
reqx = ">=0.1.27, <0.1.29"
thiserror = "2"
