# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "http_health_checker"
version = "1.0.0"
edition = "2024"
authors = ["Baptiste Roseau"]

[dependencies]
minreq = { version = "2.8", features = ["https"] }

[profile.release]
lto = true
strip = true
