[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../../api"}
logging = { path = "../../logging" }
storage = { path = "../../storage" }
config = { path = "../../config"}
database = { path = "../../database"}
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "full"] }
axum = { version = "0.8.8", features = ["http1", "http2"] }
axum-macros = "0.5.0"
axum-prometheus = { version = "*", features = ["metrics-exporter-prometheus"] }
tracing = "0.1.44"
